--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-client": "npm run build --prefix ../client",
-    "build": "node index.js",
-    "build-project" : "concurrently \"npm run build\" \"npm run build-client\""
+    "build": "npm i"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "ethereum-cryptography": "^2.0.0",
     "express": "^4.18.1",
